Fix code review issues
AnomalyDetectionService:
- Fix account baseline to use Redis (with local cache fallback) - cluster-safe
- Fix List.of() to Arrays.asList() for country risk check
- Remove unused RandomForest model import/dead code

VelocityService:
- Fix Redis TTL reset to always expire on each transaction (sliding window)

FraudDetectionService:
- Add try-catch around Kafka publish to not fail DB transaction